[gd_scene load_steps=10 format=3 uid="uid://byhx4nqhp22jo"]

[ext_resource type="Script" uid="uid://c4e02x7hylkmt" path="res://Model/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://cl6ubdvrne04k" path="res://assets/menu_pictures/placeholder.jpg" id="2_rtw2f"]
[ext_resource type="Texture2D" uid="uid://dej4bnfnmi6ug" path="res://assets/menu_pictures/logo.png" id="3_oa1go"]
[ext_resource type="Texture2D" uid="uid://bnj6op3vdclqx" path="res://assets/text_button/text_button.png" id="4_cdjdc"]
[ext_resource type="Texture2D" uid="uid://68mwm43rbf0r" path="res://assets/text_button/text_button_click.png" id="5_il2qn"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="5_jk1qb"]
[ext_resource type="Texture2D" uid="uid://cwotlcsrbjbed" path="res://assets/text_button/text_button_hover.png" id="6_75ixj"]
[ext_resource type="AudioStream" uid="uid://i702nadbvxuy" path="res://assets/sons/musiques/dark_souls_main_theme.mp3" id="7_oa1go"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.294118, 0.635294, 0.721569, 0.603922)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ln24")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="placeholder_jpg" type="Sprite2D" parent="."]
position = Vector2(955, 538)
texture = ExtResource("2_rtw2f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.0
offset_top = -296.0
offset_right = 390.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_06t4h")
metadata/_edit_use_anchors_ = true

[node name="Logo" type="Sprite2D" parent="Panel"]
position = Vector2(392, -1)
scale = Vector2(0.796892, 0.714862)
texture = ExtResource("3_oa1go")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -214.0
offset_right = 293.0
offset_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="btnJouer" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_cdjdc")
texture_pressed = ExtResource("5_il2qn")
texture_hover = ExtResource("6_75ixj")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/btnJouer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.25
offset_top = -35.0
offset_right = 78.25
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 50
text = "JOUER"

[node name="btnOptions" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_cdjdc")
texture_pressed = ExtResource("5_il2qn")
texture_hover = ExtResource("6_75ixj")
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/VBoxContainer/btnOptions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.000015
offset_top = -44.0
offset_right = 125.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="btnQuitter" type="TextureButton" parent="Panel/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_cdjdc")
texture_pressed = ExtResource("5_il2qn")
texture_hover = ExtResource("6_75ixj")

[node name="Label" type="Label" parent="Panel/VBoxContainer/btnQuitter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -44.0
offset_right = 125.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 50
text = "QUITTER"

[node name="MusiqueDeFond" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_oa1go")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Panel/VBoxContainer/btnJouer" to="." method="_on_btn_jouer_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/btnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/btnQuitter" to="." method="_on_btn_quitter_pressed"]
